<resources xmlns:tools="http://schemas.android.com/tools">


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_name" tools:ignore="PrivateResource">EinsteinTV</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="upload">Upload</string>
    <string name="or">or</string>
    <string name="home">Home</string>
    <string name="zero">0</string>
    <string name="register_et_password">Password</string>
    <string name="register_et_password_confirm">Confirm password</string>
    <string name="register_et_descr">Description</string>
    <string name="register_et_username">Username</string>
    <string name="fragment_top100">Top 100</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_profile">Profile</string>
    <string name="fragment_live">Live</string>
    <string name="settings_dark">dark_mode</string>
    <string name="settings_dark_title">Enable Dark mode</string>
    <string name="settings_admin_page">Admin</string>
    <string name="settings_admin_page_title">Open Admin Page</string>
    <string name="settings_website">View website</string>
    <string name="settings_website_title">Visit our web page</string>
    <string name="settings_termsconditions">Terms and Conditions</string>
    <string name="settings_termsconditions_title">Read our Terms and Conditions</string>
    <string name="settings_termsconditions_descr">Click to view our terms and conditions</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_logout_title">Log out of the application</string>
    <string name="settings_logout_descr">Click here to log out</string>
    <string name="settings_dark_mode_on">Dark Mode is turned on</string>
    <string name="settings_dark_mode_on_message">Hello darkness, my old friend...</string>
    <string name="settings_dark_mode_off_message">...and there was light!</string>
    <string name="settings_dark_mode_off">Dark Mode is turned off</string>
    <string name="register_et_email">Email</string>
    <string name="register_tv_">Register here</string>
    <string name="login_tv">Login here</string>
    <string name="login_btn">Log in</string>
    <string name="login_success">Successfully logged in, welcome back!</string>
    <string name="login_fail">Login failed, please try again</string>
    <string name="login_error_email_unknown">Unknown email address, please register</string>
    <string name="login_error_wrong_password">Wrong password, please try again</string>
    <string name="register_btn">Register</string>
    <string name="register_success">Registration successful. Welcome!</string>
    <string name="register_error">Something went wrong, please try again</string>
    <string name="register_authentication_error">Authentication failed</string>
    <string name="register_error_username_limit">Username cannot exceed 16 characters</string>
    <string name="register_error_username_whitespace">Username cannot contain whitespace</string>
    <string name="register_error_username_duplicate">Username already exists</string>
    <string name="register_error_email_invalid">Please enter a valid email address</string>
    <string name="register_error_email_duplicate">Email already registered</string>
    <string name="register_error_empty_field">Field cannot be empty</string>
    <string name="register_error_password_invalid">Password must be at least six characters and include one digit</string>
    <string name="register_error_confirmpassword">Passwords do not match</string>
    <string name="register_error_termsconditions_unchecked">You must agree to our Terms and Conditions</string>
    <string name="profile_image_error_none_selected">No image selected</string>
    <string name="profile_image_error_duplicate">Upload in progress</string>
    <string name="profile_image_upload_success">Upload successful</string>
    <string name="profile_image_descr_iv">User\'s profile image</string>
    <string name="profile_followers_tv">followers</string>
    <string name="profile_following_tv">following</string>
    <string name="profile_description_tv">Channel description</string>
    <string name="profile_description_empty">This channel has no description yet.</string>
    <string name="profile_streamer_error_not_registered">You must be logged in to follow a streamer!</string>
    <string name="register_cb_terms_conditions">I accept the Terms and Conditions</string>
    <string name="register_no_account_tv">No account yet?</string>
    <string name="see_more">See more</string>
    <string name="read_more">Read more</string>
    <string name="btn_choose_image">Choose image</string>
    <string name="profile_iv_preview">A preview of the image you selected</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="stopped">[Stopped]</string>
    <string name="permission_dialog_title">Camera and Audio</string>
    <string name="permission_dialog_message">"Both camera and audio permissions are needed for broadcasting</string>
    <string name="broadcast_permission_notification">You need to grant permissions in order to begin streaming</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="profile_btn_start_broadcast">Start broadcast</string>
    <string name="prof_iv_edit_description">Edit description of channel</string>
    <string name="title_activity_ask_to_stream">AskToStreamActivity</string>
    <string name="player_tv_viewers">\u0020viewers</string>
    <string name="player_submit_comment">Submit comment</string>
    <string name="player_comment_hint">Comment</string>
    <string name="player_comment_error_not_registered">You must be logged in to post a comment</string>
    <string name="player_stream_ended">The stream has ended. Thank you for watching!</string>
    <string name="player_stream_ended_live">See who else is live</string>
    <string name="player_stream_ended_profile">Visit streamer profile</string>
    <string name="player_stream_error">Could not load stream, please try again</string>
    <string name="player_stream_error_message">Could not load stream, please try again or return to home</string>
    <string name="player_stream_error_oops">Oops!</string>
    <string name="reports">Reports</string>
    <string name="reports_logged">Logged</string>
    <string name="reports_received">Received</string>
    <string name="report_body">Report body</string>
    <string name="report_dialog_title">Report abuse</string>
    <string name="report_dialog_message">Please give adequate information</string>
    <string name="report_dialog_reasons">Write your reasons for reporting here</string>
    <string name="report_confirmation">Your report has been logged and will be processed</string>
    <string name="admin_detail_report_reason">Reason</string>
    <string name="admin_detail_report_about">About: </string>
    <string name="admin_detail_report_logger">Logged by:</string>
    <string name="admin_detail_report_timestamp">Logged at:</string>
    <string name="streamer_profile_error_message">Could not find streamer\'s profile page</string>
    <string name="settings_dark_summary">Toggle between regular and dark mode</string>
    <string name="submit">Submit</string>
    <string name="request_stream_email_client">Choose your email client</string>
</resources>