<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/settings_dark"
        android:title="@string/settings_dark_title" />

    <pack.jetminister.ui.util.preferences.WebsitePreference
        android:key="@string/settings_website"
        android:title="@string/settings_website_title"/>

    <pack.jetminister.ui.util.preferences.TermsConditionsPreference
        android:key="@string/settings_termsconditions"
        android:title="@string/settings_termsconditions_title"/>

    <pack.jetminister.ui.util.preferences.LogOutPreference
        android:key="@string/settings_logout"
        android:title="@string/settings_logout_title">
    <intent
        android:action="android.intent.action.VIEW"
        android:targetPackage="pack.jetminister.ui"
        android:targetClass="pack.jetminister.ui.MainActivity" />
    /></pack.jetminister.ui.util.preferences.LogOutPreference>

</PreferenceScreen>