<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context=".ui.fragments.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:cardCornerRadius="80dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_user_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/profile_image_descr_iv"
            android:longClickable="true"
            android:scaleType="fitXY"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_user_profile_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/textPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="Dymas_420" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/profile_followers_tv"
        android:text="@string/profile_followers_tv"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_profile_username"
        tools:text="followers" />

    <TextView
        android:id="@+id/tv_user_profile_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="100" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/profile_following_tv"
        android:gravity="end"
        android:text="@string/profile_following_tv"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_profile_username"
        tools:text="following" />

    <TextView
        android:id="@+id/tv_user_profile_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:gravity="end"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="69" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profile_description_tv"
        android:text="@string/profile_description_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/iv_user_profile_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_profile_followers" />

    <TextView
        android:id="@+id/tv_user_profile_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="6dp"
        android:lineSpacingExtra="6sp"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_livestream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:text="I tried and abandoned Inventor's Outlook in Freeport, Gnomeland Security in Steamfont, the Drednever Crash Site in The Bonemire and Dropship Landing Zone in The Moors of Ykesha. Given the way things work out, I guess we're looking at late August for the pre-release patch. Growing up in the late 90′s, like a lot of kids, I fell in love with the Final Fantasy series through the brilliantly marketed Final Fantasy VII. Of course, I learned a couple of days before BWE3 that Jennifer Hale is voicing the sylvari female — that’s Commander Shepard from the Mass Effect trilogy. The first one will come out this December and the second a year after, in 2013.  Generated by MMO Ipsum Generator. " />

    <ImageView
        android:id="@+id/iv_user_profile_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        android:contentDescription="@string/prof_iv_edit_description"
        android:focusable="true"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_livestream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/profile_btn_start_broadcast"
        android:textColor="@color/colorAccent"
        android:textColorHighlight="@color/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>